Fix: fix tag list horizontal scroll, again

--- a/src-ui/src/app/components/common/input/tags/tags.component.scss
+++ b/src-ui/src/app/components/common/input/tags/tags.component.scss
@@ -23,7 +23,7 @@
 
 // Dropdown hierarchy reveal for ng-select options
 ::ng-deep .ng-dropdown-panel .ng-option {
-  overflow-x: scroll !important;
+  overflow-x: auto !important;
 
   .tag-option-row {
     font-size: 1rem;
